Refactored some code on multiple files and changed the style of displayed stuff